CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_other_income_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_other_income_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_other_income_hist</externalName>
    <fields>
        <fullName>amt_income_other_gross__c</fullName>
        <description>amt_income_other_gross</description>
        <externalDeveloperName>amt_income_other_gross</externalDeveloperName>
        <label>Gross Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_freq_income__c</fullName>
        <description>cde_freq_income</description>
        <externalDeveloperName>cde_freq_income</externalDeveloperName>
        <label>How often is the income received?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_ownrshp__c</fullName>
        <description>cde_ownrshp</description>
        <externalDeveloperName>cde_ownrshp</externalDeveloperName>
        <label>Ownership code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_income__c</fullName>
        <description>cde_source_income</description>
        <externalDeveloperName>cde_source_income</externalDeveloperName>
        <label>Income Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_docket__c</fullName>
        <description>cde_source_vrfyd_docket</description>
        <externalDeveloperName>cde_source_vrfyd_docket</externalDeveloperName>
        <label>Docket Source verified code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_income__c</fullName>
        <description>cde_source_vrfyd_income</description>
        <externalDeveloperName>cde_source_vrfyd_income</externalDeveloperName>
        <label>Income How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Income Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_vrfyd_docket__c</fullName>
        <description>cde_vrfyd_docket</description>
        <externalDeveloperName>cde_vrfyd_docket</externalDeveloperName>
        <label>Docket  verified code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rptd_change__c</fullName>
        <description>dte_rptd_change</description>
        <externalDeveloperName>dte_rptd_change</externalDeveloperName>
        <label>Change Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verification ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_court__c</fullName>
        <description>idn_court</description>
        <externalDeveloperName>idn_court</externalDeveloperName>
        <label>Court Id</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_income_other__c</fullName>
        <description>idn_income_other</description>
        <externalDeveloperName>idn_income_other</externalDeveloperName>
        <label>Other Income ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_OTHER_INCOME__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_OTHER_INCOME__c</referenceTo>
        <relationshipLabel>Other Income Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_other_income_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_income_other_hist__c</fullName>
        <description>idn_income_other_hist</description>
        <externalDeveloperName>idn_income_other_hist</externalDeveloperName>
        <label>Other Income ID history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_other_income_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User Verification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>History Number Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_income_other__c</fullName>
        <description>nbr_seq_income_other</description>
        <externalDeveloperName>nbr_seq_income_other</externalDeveloperName>
        <label>Other Income Sequence Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Other Income History</label>
    <pluralLabel>Other Income History</pluralLabel>
</CustomObject>